# yaga

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  download.py  pyutils.py  readme.txt
Asset/: CMakeLists.txt
Asset/include/Asset/: Application.h  Asset.h  Database.h  Material.h  Serializer.h  Shader.h
Asset/src/: Application.cpp  Asset.cpp  Database.cpp  Material.cpp  Pch.h  Serializer.cpp  Shader.cpp
Asset/test/: CMakeLists.txt  Pch.h
Common/: CMakeLists.txt
Common/include/: Array.h  AutoDeleter.h  Exception.h  Filesystem.h  Log.h  SmartDestructor.h  Vector.h  Version.h
Common/src/: Filesystem.cpp  Log.cpp  Pch.h
Common/test/: CMakeLists.txt  Pch.h  main.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.h
Engine/src/: Device.cpp  Device.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pch.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VideoBuffer.cpp  VideoBuffer.h  VulkanApplication.cpp  VulkanApplication.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanExtensions.h
Engine/test/: CMakeLists.txt  Pch.h
Game/: CMakeLists.txt
Game/src/: Main.cpp  Pch.h  Version.h
Launcher/: CMakeLists.txt
Launcher/assets/: config.cfg
Launcher/src/: LauncherVersion.h  Main.cpp  Options.cpp  Options.h  Pch.h
Platform/: CMakeLists.txt
Platform/include/: IApplication.h
Platform/src/: Application.cpp  Application.h  Device.cpp  Device.h  Pch.h  Utils.cpp  Utils.h  VideoBuffer.cpp  VideoBuffer.h  VulkanExtensions.h
Platform/test/: Pch.h
asset/: CMakeLists.txt
asset/include/asset/: application.h  (+8 more)
asset/src/: application.cpp  asset.cpp  database.cpp  material.cpp  mesh.cpp  precompiled.h  serialzier.cpp  shader.cpp  texture.cpp
asset/test/: CMakeLists.txt
assets/: CMakeLists.txt
assets/src/: application.cpp  asset.cpp  binary_serializer_helper.cpp  binary_serializer_helper.h  binary_serializer_registry.cpp  binary_serializer_registry.h  binary_serialzier.cpp  camera.cpp  friendly_serializer_helper.cpp  friendly_serializer_helper.h  friendly_serialzier.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  precompiled.h  scene.cpp  serialzier.cpp  shader.cpp  storage.cpp  texture.cpp  transform.cpp
demo/: CMakeLists.txt
demo/src/: application.cpp  application.h  camera_demo.cpp  camera_demo.h  demo_application.cpp  demo_application.h  main.cpp  model_demo.cpp  model_demo.h  precompiled.h  scene.h  selector.cpp  selector.h  triline_demo.cpp  triline_demo.h  widget.h
editor/: CMakeLists.txt
editor/src/: application.cpp  application.h  main.cpp  precompiled.h
editor/лул/: asset_manager.cpp  asset_manager.h  asset_manager_gui.h  asset_registry.cpp  asset_registry.h  asset_view.cpp  asset_view.h  asset_view_data.h  boundingBox.cpp  boundingBox.h  list_view_data.h
engine/: CMakeLists.txt
engine/src/: application.cpp  basic_application.cpp  basic_game.cpp  camera.cpp  circle_collider.cpp  component.cpp  config.cpp  context.cpp  debug.cpp  material.cpp  mesh.cpp  model.cpp  object.cpp  post_processor.cpp  precompiled.h  rectangle_collider.cpp  renderer.cpp  renderer3d.cpp  rendering_context.cpp  scene.cpp  scene_clipper.cpp  transform.cpp  triangulate.cpp
engine/test/: CMakeLists.txt
gui/: CMakeLists.txt
gui/src/: context.cpp  dispatcher.cpp  docking.cpp  file_dialog.cpp  imgui_demo.cpp  popup.cpp  precompiled.h  property_editor_registry.cpp  property_editor_standard.cpp  property_viewer.cpp  widget.cpp
gui/test/: CMakeLists.txt
imgui_bindings/: CMakeLists.txt
imgui_bindings/include/: imgui_config.h  imgui_wrapper.h
launcher/: CMakeLists.txt
launcher/src/: main.cpp  options.cpp  options.h  precompiled.h  version.h
model_viewer/: CMakeLists.txt
model_viewer/src/: application.cpp  application.h  boundingBox.cpp  boundingBox.h  gui.cpp  gui.h  importer.cpp  importer.h  main.cpp  model_viewer.cpp  model_viewer.h  precompiled.h
orbit_sim/: CMakeLists.txt
orbit_sim/src/: orbit_sim.cpp  orbit_sim.h  precompiled.h
player/: CMakeLists.txt
player/nvcc/: ColorSpace.cu  ColorSpace.ptx  ColorSpace2.ptx
player/src/: application.cpp  application.h  background_decoder.cpp  background_decoder.h  codec.h  decoder.h  demuxer.h  main.cpp  options.cpp  options.h  precompiled.h
renderer/: CMakeLists.txt
renderer/src/: allocator.cpp  allocator.h  application_impl.cpp  application_impl.h  device.cpp  device.h  device_buffer.cpp  device_buffer.h  extensions.h  image.cpp  image.h  image_view.cpp  image_view.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  precompiled.h  render_object.cpp  render_object.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex.cpp  vertex.h  video_buffer.cpp  video_buffer.h  vulkan_app.cpp  vulkan_app.h  vulkan_buffer.cpp  vulkan_buffer.h
renderer/test/: CMakeLists.txt
tube_race/: CMakeLists.txt
tube_race/src/: precompiled.h  tube_race.cpp  tube_race.h
utility/: CMakeLists.txt
utility/src/: base64.cpp  log.cpp  options.cpp  precompiled.h  prop_info.cpp  property.cpp  signal.cpp
utility/test/: CMakeLists.txt
vulkan_player/: CMakeLists.txt  shaders.py
vulkan_player/include/: video_player.h  vulkan_player.h
vulkan_player/shaders/: gui.frag  gui.vert
vulkan_player/src/: application.cpp  application.h  gui.h  gui_render_pass.cpp  gui_render_pass.h  main.cpp  player.h  precompiled.h
vulkan_renderer/: CMakeLists.txt
vulkan_renderer/include/: vulkan_renderer.h
vulkan_renderer/src/: allocator.cpp  allocator.h  application.cpp  application.h  buffer.cpp  buffer.h  camera.cpp  camera.h  camera_pool.cpp  camera_pool.h  config.cpp  config.h  context.cpp  context.h  device.cpp  device.h  event_dispatcher.cpp  event_dispatcher.h  frame_buffer.cpp  frame_buffer.h  gui_element.cpp  gui_mesh_pool.cpp  gui_render_pass.cpp  image.cpp  image.h  image_pool.cpp  image_pool.h  input.cpp  input.h  material.cpp  material.h  material_pool.cpp  material_pool.h  mesh.cpp  mesh.h  mesh_pool.cpp  mesh_pool.h  model.cpp  model.h  platform.cpp  (+46 more)
vulkan_renderer/test/: CMakeLists.txt
(+284 files in other folders)
